--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -162,6 +162,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Mae Signal angen caniatâd Camera er mwyn atodi tynnu lluniau neu fideos, ond fe\'i rwystrwyd yn barhaol. Ewch i ddewislen gosodiadau\'r ap, dewis "Caniatâd", a galluogi "Camera".</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Angen Signal angen caniatâd camera i dynnu lluniau neu fideo</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
+  <string name="ConversationActivity_yes">Iawn</string>
+  <string name="ConversationActivity_no">Na</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d neges heb ei ddarllen</item>
@@ -409,6 +411,11 @@ Send neges heb ei ddiogelu?</string>
   <string name="NotificationMmsMessageRecord_multimedia_message">Neges amlgyfrwng</string>
   <string name="NotificationMmsMessageRecord_downloading_mms_message">Lawrlwytho neges MMS</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Gwall wrth lawrlwytho neges MMS, tapio i geisio eto</string>
+  <!--MediaPickerActivity-->
+  <!--MediaPickerItemFragment-->
+  <!--MediaSendActivity-->
+  <!--MediaRepository-->
+  <string name="MediaRepository_all_media">Pob cyfrwng</string>
   <!--MessageRecord-->
   <string name="MessageRecord_message_encrypted_with_a_legacy_protocol_version_that_is_no_longer_supported">Wedi derbyn neges wedi\'i hamgryptio gan ddefnyddio hen fersiwn o Signal nad yw bellach yn cael ei gefnogi. Gofynnwch i\'r anfonwr ddiweddaru i\'r fersiwn ddiweddaraf ac ail-anfon y neges.</string>
   <string name="MessageRecord_left_group">Rydych wedi gadael y grŵp.</string>
