--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -154,6 +154,9 @@
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">O Signal requer permissão de acesso à Câmara para tirar fotos ou vídeo, mas esta foi negada permanentemente. Por favor aceda a permissões da aplicação, seleccione \"Permissões\" e active \"Câmara\".</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">O Signal requer permissão de acesso à Câmara para tirar fotos ou vídeo</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s%2$s</string>
+  <string name="ConversationActivity_signal_cannot_sent_sms_mms_messages_because_it_is_not_your_default_sms_app">O Signal não consegue enviar mensagens SMS/MMS porque não é o seu programa padrão de SMS. Quer alterar isto nas configurações do Android?</string>
+  <string name="ConversationActivity_yes">Sim</string>
+  <string name="ConversationActivity_no">Não</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d mensagem não lida</item>
@@ -371,6 +374,14 @@
   <string name="NotificationMmsMessageRecord_multimedia_message">Mensagem multimédia</string>
   <string name="NotificationMmsMessageRecord_downloading_mms_message">A descarregar MMS</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Erro a descarregar MMS, toque para repetir</string>
+  <!--MediaPickerActivity-->
+  <string name="MediaPickerActivity_send_to">Enviar para %s</string>
+  <!--MediaPickerItemFragment-->
+  <string name="MediaPickerItemFragment_tap_to_select">Tocar para selecionar</string>
+  <!--MediaSendActivity-->
+  <string name="MediaSendActivity_add_a_caption">Adicionar uma legenda...</string>
+  <!--MediaRepository-->
+  <string name="MediaRepository_all_media">Toda a multimédia</string>
   <!--MessageRecord-->
   <string name="MessageRecord_message_encrypted_with_a_legacy_protocol_version_that_is_no_longer_supported">Recebeu uma mensagem encriptada com uma versão anterior do Signal, que já não é suportada. Por favor peça ao remetente para actualizar para a versão mais recente e reenviar a mensagem.</string>
   <string name="MessageRecord_left_group">Abandonou o grupo.</string>
